# snipQ

./: .gitignore  CMakeLists.txt  Dockerfile.windows-crossbuild  README.md  build-linux.sh  build-windows.ps1  build.sh  snipQ.kdev4
.github/workflows/: AppImage.yml  build.yml  release.yml
packaging/: PKGBUILD  io.snipq.snipQ.yml  snipq.desktop.in
resources/: resources.qrc
src/: appsettings.h  codeeditor.cpp  codeeditor.h  codeformatter.cpp  codeformatter.h  database.cpp  database.h  highlighter.cpp  highlighter.h  importexport.cpp  importexport.h  limits.h  main.cpp  mainwindow.cpp  mainwindow.h  newsnippetdialog.cpp  newsnippetdialog.h  qt_compat.h  sidebar.cpp  sidebar.h  snippeteditor.cpp  snippeteditor.h  snippetlist.cpp  snippetlist.h  theme.h
src/dialogs/: cloudsyncdialog.cpp  cloudsyncdialog.h  newfolderdialog.cpp  newfolderdialog.h  newsnippetdialog.cpp  newsnippetdialog.h  settingsdialog.cpp  settingsdialog.h
src/models/: folder.h  snippet.h
src/sync/: ftpsync.cpp  ftpsync.h  smbsync.cpp  smbsync.h  syncmanager.cpp  syncmanager.h
